--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "private": true,
     "dependencies": {
         "@sap/cds": "^4",
-        "express": "^4",
+        "easy-livereload": "^1.4.3",
         "execa": "^4.0.0",
-        "get-stream": "^5.1.0"
+        "express": "^4",
+        "get-stream": "^5.1.0",
+        "node-dev": "^6.2.0"
     },
     "devDependencies": {
         "sqlite3": "^5"
